might have fixed gap between playlist bar and video for high res

--- a/app/components/Playlists/Buttons/join-waitlist.scss
+++ b/app/components/Playlists/Buttons/join-waitlist.scss
@@ -4,7 +4,7 @@
 .join-waitlist {
   // margin-left: 0;
   font-size: 1.25vw;
-  line-height: 4.25vw;
+  line-height: 4.5vw;
   width: 100%;
   height: 100%;
   // display: inline-block;
